[package]
name = "fireblocks_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
co-signer = []
callbacks = []
api-client = []

[dependencies]
tokio = { version = "*", features = ["full"] }
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
uuid = {version = "1.1.2", features = ["v4"]}
sha2 = "0.10.2"
hex = "*"
hmac = "*"
hyper = { version = "0.14", features = ["full"] }
async-trait = "*"
hyper-tls = "*"
serde_json = "1.0.60"