[package]
name = "fireblocks_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
co-signer = []
callbacks = []
api-client = []

[dependencies]
flurl = { tag = "0.5.3", git = "https://github.com/MyJetTools/fl-url" }
tokio = { version = "*", features = ["full"] }
jsonwebtoken = "*"
serde = { version = "*", features = ["derive"] }
uuid = { version = "*", features = ["v4"] }
sha2 = "*"
hex = "*"
hmac = "*"
async-trait = "*"
hyper-tls = "*"
serde_json = "*"
